# NoveoCPP

./: .gitignore  AppConfig.h  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  ChatSettingsDialog.cpp  ChatSettingsDialog.h  DataStructures.h  MainWindow.cpp  MainWindow.cpp.backup  MainWindow.h  Makefile  MediaViewerDialog.cpp  MediaViewerDialog.h  MessageBubble.cpp  MessageBubble.h  MessageItemWidget.cpp  MessageItemWidget.h  README.md  RestClient.cpp  RestClient.h  SessionStore.cpp  SessionStore.h  SettingsDialog.cpp  SettingsDialog.h  UpdaterService.cpp  UpdaterService.h  UserListDelegate.h  VoiceAudioBridge.cpp  VoiceAudioBridge.h  WebSocketClient.cpp  WebSocketClient.h  build.bat  build.ninja  build_and_package_x64.bat  cmake_install.cmake  main.cpp  version.rc
.github/workflows/: build.yml
